<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonMostrarCoche"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/mostrarCoches"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonMostrarGasto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/mostrarGastos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMostrarCoche" />

    <Button
        android:id="@+id/buttonInsertarCoche"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/insertarCoches"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonModificarCoche"
        app:layout_constraintEnd_toStartOf="@+id/buttonModificarGasto"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonModificarCoche"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/modificarCoches"
        app:layout_constraintEnd_toStartOf="@+id/buttonBorrarCoche"
        app:layout_constraintStart_toEndOf="@+id/buttonInsertarCoche"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBorrarCoche"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/BorrarCoches"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonModificarCoche"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonModificarCoche" />

    <Button
        android:id="@+id/buttonModificarGasto"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/modificarGastos"
        app:layout_constraintBottom_toTopOf="@+id/buttonMostrarCoche"
        app:layout_constraintEnd_toStartOf="@+id/buttonBorrarCoche"
        app:layout_constraintStart_toEndOf="@+id/buttonInsertarGasto" />

    <Button
        android:id="@+id/buttonBorrarGasto"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/BorrarGastos"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonModificarGasto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonModificarGasto" />

    <Button
        android:id="@+id/buttonInsertarGasto"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/insertarGastos"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonModificarGasto"
        app:layout_constraintEnd_toStartOf="@+id/buttonModificarGasto"
        app:layout_constraintStart_toStartOf="@+id/buttonInsertarCoche" />

    <ListView
        android:id="@+id/Lista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMostrarGasto" />

</androidx.constraintlayout.widget.ConstraintLayout>